CMAKE_MINIMUM_REQUIRED( VERSION 3.16 )

PROJECT( EdcLib CXX )

ADD_COMPILE_OPTIONS ( -std=c++17 )

SET ( PROJECT_VERSION_MAJOR 1 )
SET ( PROJECT_VERSION_MINOR 0 )
SET ( CMAKE_CXX_FLAGS "-g -Wunused-result -rdynamic -D__EDC_LOG_SECURITY__" )

INCLUDE_DIRECTORIES( . )

AUX_SOURCE_DIRECTORY( ./dep SRC_DEP ) #依赖
AUX_SOURCE_DIRECTORY( ./player SRC_PLAYER ) #玩家
AUX_SOURCE_DIRECTORY( ./instance SRC_INSTANCE ) #副本
#AUX_SOURCE_DIRECTORY( ./exception SRC_EDC_EXCEPTION )

add_executable( instance.out
    ${SRC_DEP}
    ${SRC_PLAYER}
    ${SRC_INSTANCE}
)
